:zap: 이미 읽은책, 읽고싶은 책 보완 - request param에 month query 추가, response에 image_url 추
(cherry picked from commit e50559062269ef42845a0022c5efe845bfc5c80a)